fix: Adjust h1 font size for improved readability

--- a/frontend/home.css
+++ b/frontend/home.css
@@ -80,7 +80,7 @@ body {
   margin: 10px 0;
 }
 .text-content h1 {
-  font-size: 6rem;
+  font-size: 6.5rem;
   margin: 10px 0;
   letter-spacing: -10px;
   font-weight: 800;
